# ts-webgpu-game

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  biome.jsonc  build.py  package.json  turbo.json
apps/game/: index.html  package.json  tsconfig.json  vite.config.ts
apps/game/src/: main.ts  style.css
apps/game/src/Engine/: ECS.ts  Engine.ts  GameLoop.ts  index.ts
apps/game/src/Engine/core/: InputManager.ts
apps/game/src/Engine/math/: index.ts
apps/game/src/Engine/renderer/: Renderer.ts  geometry.ts  index.ts  renderer.utils.ts
apps/game/src/Engine/renderer/shaders/: shader.wgsl
apps/game/src/Engine/resources/: Resource.ts  ResourceLoader.ts  ResourceManager.ts  index.ts
apps/game/src/Engine/resources/loaders/: TexutreLoader.ts
apps/game/src/Engine/shaders/: shader.wgsl
apps/game/src/Engine/utils/: color.ts  index.ts
apps/game/src/Game/: Game.ts  Utils.ts  WebGPUUtils.ts
cmake/: CompileOptions.cmake  Config.cmake  PreConfig.cmake  Utils.cmake
cmake/tests/: CMakeLists.txt
scripts/: config.py  vendor_dawn.py  vendor_entt.py  vendor_glm.py  vendor_sdl.py  vendor_spdlog.py  vendor_stb.py
source/: CMakeLists.txt
source/game/: CMakeLists.txt
source/game/source/: GamePCH.hpp  main.cpp
source/game/source/Platform/WebGPU/: WebGPU.cpp  WebGPU.hpp
source/hub33k/: CMakeLists.txt  README.md
source/hub33k/source/: hub33k.hpp
source/hub33k/source/hub33k/Core/: Assert.hpp  Base.hpp  Compiler.hpp  Defines.hpp  Log.cpp  Log.hpp  Platform.hpp  PlatformDetection.hpp  Timer.hpp  Timestep.hpp
source/hub33k/source/hub33k/Debug/: Instrumentor.hpp
source/hub33k/source/hub33k/Utils/: BumpAllocator.cpp  BumpAllocator.hpp  FileIO.cpp  FileIO.hpp  Math.hpp
source/hub33k/tests/: CMakeLists.txt  README.md
source/hub33k/tests/Prototypes/: BumpAllocatorRaw_tests.cpp
source/hub33k/tests/Utils/: BumpAllocator_tests.cpp  FileIO_tests.cpp
source/sdl3webgpu/: CMakeLists.txt  README.md
source/sdl3webgpu/source/: sdl3webgpu.c  sdl3webgpu.h
